:construction: Estruturando a seção sobre + ajustes resposividade início e header

--- a/index.html
+++ b/index.html
@@ -59,7 +59,30 @@
      </section>
 
     <!-- Seção Sobre --> 
-     <section class="sobre-section" id="sobre">
+     <section class="sobre" id="sobre">
+
+        <div class="sobre-container">
+
+            <div class="sobre-text">
+                <h2 class="main-text">
+                    Olá, Sou João <br> Desenvolvedor Web
+                </h2>
+                <p>Back-End Developer | Java Fan | VSCode</p>
+                <a href="path/to/your-file.pdf" class="download-link" download>Download CV</a>
+            </div>
+            
+            <div class="sobre-info">
+                    
+                <h2>Sobre mim</h2><br>
+                <p>Desde 2023, quando iniciei meus estudos, venho me dedicando a aprender de forma autodidata e atualmente curso Análise e Desenvolvimento de Sistemas. Sou apaixonado por futebol, atividades ao ar livre, fotografia e, claro, programação. Atualmente, trabalho com tecnologias como Java, JavaScript, Angular, HTML, CSS, Postman e MySQL.</p>
+                <h2>Formação </h2><br>
+                <p>Análise e Desenvolvimento de Sistemas</p><br>
+                <p>Cruzeiro do Sul</p><br>
+                <p>2025 - 2026</p>
+
+            </div>
+
+        </div>
 
      </section> 
 
