Adicionando funcionalidade para enviar email através do fomulario

--- a/index.html
+++ b/index.html
@@ -286,15 +286,15 @@
 
             <div class="card-form">
 
-                <form action="">
+                <form action="https://formsubmit.co/victorsrodrigues99@gmail.com" method="POST">
                     <label for="name"></label>
-                    <input type="text" placeholder="Seu nome">
+                    <input type="text" name="name" placeholder="Seu nome" required>
     
                     <label for="email"></label>
-                    <input type="text" placeholder="Seu e-mail">
+                    <input type="text" name="email" placeholder="Seu e-mail" required>
     
                     <label for="message"></label>
-                    <input type="text" placeholder="Sua mensagem aqui">
+                    <input type="text" name="message" placeholder="Sua mensagem aqui" required>
 
                     <button type="submit" class="btn-form"> Enviar </button>
                 </form>
