Ajustando imagens e informações dentro dos cards de projeto, aumento do input de mensagem e definição de max-length na section contato

--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
                             <img src="/assets/img/img-normal/memoteca.png" alt="">
                         </div>
                         <div class="card-back">
-                        <p>Mais detalhes sobre o projeto...</p>
+                        <p class="card-info">Desenvolvida com Angular e JavaScript, a Memoteca é uma ferramenta leve e funcional para criar e personalizar notas em formato de cards. Seu banco de dados em memória permite armazenamento rápido, ideal para testar ideias e manter informações organizadas.</p>
                         </div>
                     </div>
                 </div>
@@ -246,7 +246,7 @@
                             <img src="/assets/img/img-normal/sge.png" alt="">
                         </div>
                         <div class="card-back">
-                        <p>Mais detalhes sobre o projeto...</p>
+                        <p class="card-info">O sistema de gestão de equipes, ainda em desenvolvimento, permite criar e editar atletas, listar jogos futuros e cadastrar usuários. Desenvolvido com Java Spring no backend, Angular no frontend e MySQL para armazenamento, foi testado com Postman. Futuramente, contará com suporte para pagamentos integrados.</p>
                         </div>
                     </div>
                 </div>
@@ -257,19 +257,8 @@
                             <img src="/assets/img/img-normal/picweb.png" alt="">
                         </div>
                         <div class="card-back">
-                        <p>Mais detalhes sobre o projeto...</p>
+                        <p class="card-info">Mais detalhes sobre o projeto...</p>
                         </div>
-                    </div>
-                </div>
-
-                <div class="project-flip-card">
-                    <div class="card-inner">
-                    <div class="card-front">
-                        <h3>Projeto 4</h3>
-                    </div>
-                    <div class="card-back">
-                        <p>Mais detalhes sobre o projeto...</p>
-                    </div>
                     </div>
                 </div>
 
@@ -294,7 +283,7 @@
                     <input type="text" name="email" placeholder="Seu e-mail" required>
     
                     <label for="message"></label>
-                    <input type="text" name="message" placeholder="Sua mensagem aqui" required>
+                    <input type="text" class="msg-input" name="message" placeholder="Sua mensagem aqui" maxlength="250" required>
 
                     <button type="submit" class="btn-form"> Enviar </button>
                 </form>
